testsuite/poke.pkl/int-union-type-diag-4.pk
/* { dg-do compile } */

type Foo =
  union int<32>
  {
    int<32> i;
    int<32>[] je; /* { dg-error "invalid field.*\n.*expected integral, offset, integral struct or union" } */
  };
